Modules/LancetHardwareDevice/DianaApi/include/DianaApiCommon.h

DIANA_API int setCartImpedance(/*IN[6]*/ double *arrStiff, /*IN[6]*/ double *arrDamp,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int getCartImpedance(/*OUT[6]*/ double *arrStiff, /*OUT[6]*/ double *arrDamp,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int zeroSpaceFreeDriving(/*IN*/ bool enable, /*IN*/ const char *strIpAddress = "");
DIANA_API int createPath(/*IN*/ int type, /*OUT*/ unsigned int &id_path,
                         /*IN*/ const char *strIpAddress = ""); /*1 for moveJ, 2 for moveL*/
DIANA_API int addMoveL(/*IN*/ unsigned int id_path, /*IN[7]*/ double *joints, /*IN*/ double vel,
                       /*IN*/ double acc,
                       /*IN*/ double blendradius, /*IN*/ bool avoid_singular = false,
                       /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveJ(/*IN*/ unsigned int id_path, /*IN[7]*/ double *joints, /*IN*/ double vel_percent,
                       /*IN*/ double acc_percent, /*IN*/ double blendradius_percent,
                       /*IN*/ const char *strIpAddress = "");
DIANA_API int runPath(/*IN*/ unsigned int id_path, /*IN*/ const char *strIpAddress = "");
DIANA_API int destroyPath(/*IN*/ unsigned int id_path, /*IN*/ const char *strIpAddress = "");
DIANA_API int rpy2Axis(/*IN[3]*/ double *arr);
DIANA_API int axis2RPY(/*IN[3]*/ double *arr);
DIANA_API int enableTorqueReceiver(/*bool*/ bool bEnable, /*IN*/ const char *strIpAddress = "");
DIANA_API int sendTorque_rt(/*IN[7]*/ double *torque, /*IN*/ double t, /*IN*/ const char *strIpAddress = "");
DIANA_API int enableCollisionDetection(bool bEnable, /*IN*/ const char *strIpAddress = "");
DIANA_API int setActiveTcpPayload(/*IN[10]*/ double *payload, /*IN*/ const char *strIpAddress = "");
DIANA_API int servoJ(/*IN[7]*/ double *joints, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                     /*IN*/ const char *strIpAddress = "");
DIANA_API int servoL(/*IN[6]*/ double *pose, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                     /*IN*/ double scale, /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int servoJ_ex(/*IN[7]*/ double *joints, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                        /*IN*/ bool realiable, /*IN*/ const char *strIpAddress = "");
DIANA_API int servoL_ex(/*IN[6]*/ double *pose, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                        /*IN*/ double scale, /*IN*/ bool realiable, /*IN[6]*/ double *active_tcp = nullptr,
                        /*IN*/ const char *strIpAddress = "");
DIANA_API int speedJ_ex(/*IN[7]*/ double *speed, /*IN*/ double a, /*option*/ double t, /*IN*/ bool realiable,
                        /*IN*/ const char *strIpAddress = "");
DIANA_API int speedL_ex(/*IN[6]*/ double *speed, /*IN[2]*/ double *a, /*option*/ double t, /*IN*/ bool realiable,
                        /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");