Plugins/org.mitk.lancet.CZXtest/DianaApi/X64/include/DianaApiSpecial.h

DIANA_API int homogeneous2Pose(/*IN[16]*/ double *matrix, /*OUT[6]*/ double *pose);
DIANA_API int pose2Homogeneous(/*IN[6]*/ double *pose, /*OUT[16]*/ double *matrix);